<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNetworkLocation"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clGPSLocation"
        app:layout_constraintVertical_bias="0.073">

        <TextView
            android:id="@+id/titleNETWORK"
            android:layout_width="131dp"
            android:layout_height="22dp"
            android:text="@string/txt_net_panel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewLatNetworke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_view_lat"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleNETWORK" />

        <TextView
            android:id="@+id/txtViewLatNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/txtViewLatNetworke"
            app:layout_constraintTop_toBottomOf="@+id/titleNETWORK" />

        <TextView
            android:id="@+id/txtViewLonNetworke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_view_lon"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewLatNetworke" />

        <TextView
            android:id="@+id/txtViewLonNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/txtViewLonNetworke"
            app:layout_constraintTop_toBottomOf="@+id/txtViewLatNetwork" />

        <TextView
            android:id="@+id/txtViewAltNetworke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_view_alt"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewLonNetworke" />

        <TextView
            android:id="@+id/txtViewAltNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/txtViewAltNetworke"
            app:layout_constraintTop_toBottomOf="@+id/txtViewLonNetwork" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGPSLocation"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewLatGPSe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_view_lat"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TitleGPS" />

        <TextView
            android:id="@+id/txtViewLatGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/txtViewLatGPSe"
            app:layout_constraintTop_toBottomOf="@+id/TitleGPS" />

        <TextView
        android:id="@+id/txtViewLonGPSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_view_lon"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLatGPSe" />

    <TextView
        android:id="@+id/txtViewLonGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@+id/txtViewLonGPSe"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLatGPS" />

    <TextView
        android:id="@+id/txtViewAltGPSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_view_alt"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLonGPSe" />

        <TextView
            android:id="@+id/TitleGPS"
            android:layout_width="131dp"
            android:layout_height="22dp"
            android:text="@string/txt_gps_panel"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/txtViewAltGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        app:layout_constraintStart_toEndOf="@+id/txtViewAltGPSe"
        app:layout_constraintTop_toBottomOf="@+id/txtViewLonGPS" />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMeteo"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clGPSLocation"
        app:layout_constraintVertical_bias="0.94">


        <TextView
            android:id="@+id/METEOtitle"
            android:layout_width="131dp"
            android:layout_height="22dp"
            android:text="METEO JOUR"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/DAY1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="JOUR 1"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/METEOtitle" />

        <TextView
            android:id="@+id/DAY1txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/DAY1"
            app:layout_constraintTop_toBottomOf="@+id/METEOtitle" />

        <TextView
            android:id="@+id/DAY2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="JOUR 2"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DAY1" />

        <TextView
            android:id="@+id/DAY2txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@+id/DAY2"
            app:layout_constraintTop_toBottomOf="@+id/DAY1txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>